@@ -5,6 +5,9 @@ TODO LIST (Moved again to the file TODO)
   clickable through KActiveLabel. Made the credits text scrollable
   with a QTextEdit.
 * Weird redraw bugs reappear in the conduit config dialog, fixed again.
+* Added sorryVersionOutdated() to KPilotConfig to notify user that
+  the configs are old, and telling what's changed. Used in kpilot and
+  the daemon. Includes cleanup. Use getDebugLevel() properly.
 
 2003-7-5  Adriaan de Groot
 * Upped the config version number to 440.
